--- a/.github/workflows/publish_plugin.yml
+++ b/.github/workflows/publish_plugin.yml
@@ -1,15 +1,14 @@
-name: PR
+name: Publish Plugin to Rubygems.org
 
-on: [pull_request]
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v1
     - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: ls
+      run: echo "publish plugin!"
