--- a/.github/workflows/verify_publish_state.yml
+++ b/.github/workflows/verify_publish_state.yml
@@ -15,4 +15,4 @@ jobs:
         ruby-version: 2.x
     - name: Run ruby script
       run: |
-        ruby -e "puts 'hey!"'
+        ruby -e "puts 'hey'"
