--- a/.github/workflows/verify_publish_state.yml
+++ b/.github/workflows/verify_publish_state.yml
@@ -13,7 +13,4 @@ jobs:
       uses: actions/setup-ruby@v1
       with:
         ruby-version: 2.x
-    - name: Run ruby script
-      run: |
-        ruby -e "puts ENV.inspect"
-        ls -lha
+    - uses: jsvd/logstash-plugin-actions@master
