--- a/.github/workflows/verify_publish_state.yml
+++ b/.github/workflows/verify_publish_state.yml
@@ -1,13 +1,12 @@
-name: Verify presence of version bump
+name: Verify presence of version bumps
 
 on:
   pull_request:
-    types: [opened, edited]
+    types: [opened, edited, synchronize]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo "Plugin may have changed version"
+    - uses: jsvd/logstash-plugin-actions@master
