update workflow actions

--- a/.github/workflows/publish_plugin.yml
+++ b/.github/workflows/publish_plugin.yml
@@ -5,10 +5,19 @@ on:
     branches:
       - master
 
+on:
+  pull_request:
+    types: [opened, edited, synchronize]
+
 jobs:
-  build:
+  verify_version:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo "publish plugin!"
+    - uses: jsvd/logstash-plugin-actions@master
+  publish:
+    needs: verify_version
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - uses: jsvd/logstash-plugin-action-publish@master
