--- a/.github/workflows/verify_publish_state.yml
+++ b/.github/workflows/verify_publish_state.yml
@@ -5,7 +5,7 @@ on:
     types: [opened, edited, synchronize]
 
 jobs:
-  build:
+  verify_version:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
