--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ addons:
   apt:
     packages:
     - docker-ce
-import: jsvd/ci:travis_template.yml@master
+import: jsvd/.ci:travis_template.yml@master
 install: ci/unit/docker-setup.sh
 script: ci/unit/docker-run.sh
