--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,1 @@
-sudo: required
-services: docker
-addons:
-  apt:
-    packages:
-    - docker-ce
-import: jsvd/.ci:travis_template.yml@master
-install: ci/unit/docker-setup.sh
-script: ci/unit/docker-run.sh
+import: jsvd/travis-test-yaml-template:travis-template.yml
