--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,5 @@
----
-sudo: required
-services: docker
-addons:
-  apt:
-    packages:
-    - docker-ce
-matrix:
-  include:
-  - env: SNAPSHOT=true ELASTIC_STACK_VERSION=8.x
-  - env: SNAPSHOT=true ELASTIC_STACK_VERSION=7.x
-  - env: ELASTIC_STACK_VERSION=7.x
-  - env: SNAPSHOT=true ELASTIC_STACK_VERSION=6.x
-  - env: ELASTIC_STACK_VERSION=6.x
-  - env: ELASTIC_STACK_VERSION=5.x
-  fast_finish: true
-install: ci/unit/docker-setup.sh
-script: ci/unit/docker-run.sh
+import:
+  - jsvd/.ci:travis/defaults.yml@travis_refactor
+  - jsvd/.ci:travis/matrix.yml@travis_refactor
+  - jsvd/.ci:travis/exec.yml@travis_refactor
+  - jsvd/.ci:travis/deploy.yml@travis_refactor
