simplify travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,2 @@
 import:
-- jsvd/.ci:travis/defaults.yml@travis_refactor
-- jsvd/.ci:travis/matrix.yml@travis_refactor
-- jsvd/.ci:travis/exec.yml@travis_refactor
-- jsvd/.ci:travis/deploy.yml@travis_refactor
+- jsvd/.ci:travis/travis.yml@travis_refactor
